--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev" : "nodemon"
+    "dev": "nodemon mail.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,9 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.1",
+    "env": "^0.0.2",
+    "express": "^5.1.0",
+    "nodemailer": "^7.0.5"
   }
 }
